--- a/src/app/components/main/clanwars/history/history.component.html
+++ b/src/app/components/main/clanwars/history/history.component.html
@@ -1,1 +1,19 @@
-<p>history works!</p>
+<p-card>
+  <div class="history-filter-card">
+    <h2>{{ 'clanwars.history.title' | translate }}</h2>
+    <app-general-filter [isHistory]="true"></app-general-filter>
+    <p-paginator [rows]="service.form.pageSize.value" [first]="service.first" [totalRecords]="service.totalCount"
+      [rowsPerPageOptions]="[25, 50,75 ,100]" (onPageChange)="service.onPage($event)"></p-paginator>
+    <a class="round-icon-button reload-list" (click)="service.load()">
+      <fa-icon [icon]="faRedo"></fa-icon>
+    </a>
+  </div>
+</p-card>
+<div *ngFor="let item of service.items">
+  <p-card class="no-padding">
+    <app-match-item [match]="item"></app-match-item>
+  </p-card>
+</div>
+<p-paginator *ngIf="service.items.length > 0" [first]="service.first" [rows]="service.form.pageSize.value"
+  [totalRecords]="service.totalCount" [rowsPerPageOptions]="[25, 50,75 ,100]" (onPageChange)="service.onPage($event)">
+</p-paginator>
