--- a/src/app/components/main/clanwars/livefeed-filter/livefeed-filter.component.html
+++ b/src/app/components/main/clanwars/livefeed-filter/livefeed-filter.component.html
@@ -15,7 +15,7 @@
   </div>
 
   <div id="favsOnly" class="filter-wrap input-switch">
-    <p-inputSwitch [formControl]="service.form.favsOnly"></p-inputSwitch>
+    <p-inputSwitch [formControl]="cwService.form.onlyShowFavs"></p-inputSwitch>
     <label>
       {{ 'clanwars.filters.favsOnly.label' | translate }}
     </label>
