--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -444,7 +444,7 @@ body .ui-chips>ul.ui-inputtext .ui-chips-token {
   padding-right: 1.7em;
   margin: 0 0.286em 0 0;
   background: $primaryColor;
-  color: $primaryTextColor;
+  // color: $primaryTextColor;
 }
 
 body .ui-dropdown {
