--- a/src/app/components/main/clanwars/clanwars.component.html
+++ b/src/app/components/main/clanwars/clanwars.component.html
@@ -1,3 +1,10 @@
 <div class="container small">
   <router-outlet></router-outlet>
 </div>
+
+<div class="floating-buttons force-show" *showOnScroll="300">
+  <a class="round-icon-button" (click)="scrollService.scrollTo(0)">
+    <fa-icon [icon]="faChevronUp" [fixedWidth]="true"></fa-icon>
+  </a>
+</div>
+
