--- a/src/app/components/main/clanwars/match-item/match-item.component.html
+++ b/src/app/components/main/clanwars/match-item/match-item.component.html
@@ -1,6 +1,8 @@
 <app-match-item-team id="left" [clan]="match.winner" [entry]="match.winnerEntry"></app-match-item-team>
 <div id="center">
-  <span class="vs">vs.</span>
+  <img *ngIf="match.primeTime" class="region"
+    src="assets/region-{{match.primeTime | prime2Region:match.season }}.svg" />
+  <span class="vs">vs</span>
   <span class="date">{{match.date | date:'d.M.yy H:mm:ss'}}</span>
   <strong class="estimated" *ngIf="match.estimated">Estimated</strong>
 </div>
