--- a/src/styles/clanwars.scss
+++ b/src/styles/clanwars.scss
@@ -34,6 +34,10 @@ app-match-item {
     align-items: center;
     justify-content: center;
 
+    .region {
+      height: 2em;
+    }
+
     .vs {
       font-size: 1.5em;
     }
@@ -149,6 +153,19 @@ app-match-item-team {
   }
 }
 
+.history-filter-card {
+  position: relative;
+
+  .reload-list {
+    position: absolute;
+    right: 0;
+    top: 0;
+    font-size: 1.2em;
+    z-index: 999;
+    transition: .3s all ease-in-out;
+  }
+}
+
 .livefeed-filter-card {
   position: relative;
 
@@ -205,6 +222,10 @@ app-favorite-input {
   grid-template-columns: 1fr 1fr 1fr;
   gap: 1em;
   margin-bottom: 1em;
+
+  &.history {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
 
   &.livefeed {
     grid-template-columns: auto auto 40%;
