--- a/src/app/components/main/clanwars/general-filter/general-filter.component.html
+++ b/src/app/components/main/clanwars/general-filter/general-filter.component.html
@@ -1,5 +1,5 @@
-<div class="filters-wrap" [class.history]="isHistory">
-  <div class="filter-wrap">
+<div class="filters-wrap" [class.history]="isHistory" [class.clan]="isClan">
+  <div class="filter-wrap" *ngIf="!isClan">
     <label>{{'clanwars.filters.region.label' | translate}}</label>
     <p-multiSelect appendTo="body" [options]="clanwars.regionOptions" [formControl]="service.form.region"
       [filter]="false" [maxSelectedLabels]="3">
@@ -17,7 +17,7 @@
     </p-multiSelect>
   </div>
 
-  <div class="filter-wrap">
+  <div class="filter-wrap" *ngIf="!isClan">
     <label>{{'clanwars.filters.league.label' | translate}}</label>
     <p-multiSelect appendTo="body" [options]="clanwars.leagueOptions" [formControl]="service.form.league"
       [defaultLabel]="'clanwars.filters.league.empty' | translate">
@@ -38,7 +38,7 @@
     </p-multiSelect>
   </div>
 
-  <div class="filter-wrap">
+  <div class="filter-wrap" *ngIf="!isClan">
     <label>{{'clanwars.filters.division.label' | translate}}</label>
     <p-multiSelect appendTo="body" [options]="clanwars.divisionOptions" [formControl]="service.form.division"
       [defaultLabel]="'clanwars.filters.division.empty' | translate">
@@ -54,6 +54,13 @@
         Division {{ item.value | roman }}
       </ng-template>
     </p-multiSelect>
+  </div>
+
+  <div class="filter-wrap" *ngIf="isClan">
+    <label>{{'clanwars.filters.team.label' | translate}}</label>
+    <p-dropdown appendTo="body" [options]="clanwars.teamOptions" [formControl]="service.form.team"
+      [placeholder]="'clanwars.filters.team.empty' | translate" [showClear]="true">
+    </p-dropdown>
   </div>
 
   <div class="filter-wrap" *ngIf="isHistory">
