Analytics popup, Clanwars styles and logic

--- a/src/app/components/main/about/about.component.html
+++ b/src/app/components/main/about/about.component.html
@@ -7,21 +7,21 @@
     <p>
       This app was created with <a href="https://electronjs.org/">Electron</a> and <a
         href="https://angular.io/">Angular</a>.<br />
-      It mainly functions as a user interface for data provided by a centralized API written in <a
+      It functions as a user interface for data provided by a centralized API written in <a
         href="https://github.com/dotnet/core">.NET Core</a>.<br /><br />
     </p>
     <p>
-      This app uses publicly available data from the Waraming API as part of the WG DPP program.
+      This app uses publicly available data from the Wargaming API.
       By using this app you agree to:
     </p>
     <ul>
-      <li>fetching data from API on your behalf</li>
+      <li>fetching data from the API on your behalf</li>
       <li>processing of fetched data</li>
       <li>display of fetched data in this app</li>
     </ul>
     <p>
-      It only accesses publicly available information (e.g. number of battles, statistics). We do not collect
-      private data (e.g. email address, number of credits).
+      It only accesses publicly available information (e.g. number of battles, statistics). It does not collect any
+      private data (e.g. email address, number of credits). None of your personal stats are stored on the server.
     </p>
     <p>
       The color values for the Personal Rating and other stats are provided by <a
