--- a/src/app/components/default/default.component.html
+++ b/src/app/components/default/default.component.html
@@ -3,7 +3,7 @@
     <video src="assets/loader.webm" autoplay loop></video>
     <span>WoWs Monitor</span>
     <ng-container *ngIf="updating">
-      <div>
+      <div class="updating-progress">
         <p-progressBar mode="indeterminate"></p-progressBar>
       </div>
       <span>Updating...</span>
