--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -1,5 +1,5 @@
 <div class="floating-buttons">
-  <a routerLink="/home">
+  <a routerLink="/home" class="round-icon-button">
     <fa-icon [icon]="faDesktop" [fixedWidth]="true"></fa-icon>
   </a>
 </div>
@@ -31,6 +31,28 @@
           <p-inputSwitch [(ngModel)]="config.allowBeta"></p-inputSwitch>
         </div>
       </article> -->
+      <article *isBrowser>
+        <caption>
+          {{ 'settings.general.enableAnalytics.caption' | translate }}
+        </caption>
+        <summary>
+          {{ 'settings.general.enableAnalytics.summary' | translate }}
+        </summary>
+        <div class="input-wrap">
+          <p-inputSwitch [(ngModel)]="config.enableAnalytics"></p-inputSwitch>
+        </div>
+      </article>
+      <article [class.disabled]="!config.enableAnalytics">
+        <caption>
+          {{ 'settings.general.anonymIp.caption' | translate }}
+        </caption>
+        <summary>
+          {{ 'settings.general.anonymIp.summary' | translate }}
+        </summary>
+        <div class="input-wrap">
+          <p-inputSwitch [(ngModel)]="config.anonymIp"></p-inputSwitch>
+        </div>
+      </article>
       <article *isDesktop>
         <caption>
           {{ 'settings.general.closeToTray.caption' | translate }}
