--- a/src/app/components/main/clanwars/match-item/match-item.component.html
+++ b/src/app/components/main/clanwars/match-item/match-item.component.html
@@ -1,4 +1,4 @@
-<app-match-item-team id="left" [clan]="normal ? match.winner : match.looser"
+<app-match-item-team id="left" [season]="match.season" [clan]="normal ? match.winner : match.looser"
   [entry]="normal ? match.winnerEntry : match.looserEntry"></app-match-item-team>
 <div id="center">
   <img *ngIf="match.primeTime" class="region"
@@ -7,5 +7,5 @@
   <span class="date">{{match.date | date:'d.M.yy H:mm:ss'}}</span>
   <strong class="estimated" *ngIf="match.estimated">Estimated</strong>
 </div>
-<app-match-item-team id="right" [clan]="normal ? match.looser : match.winner"
+<app-match-item-team id="right" [season]="match.season" [clan]="normal ? match.looser : match.winner"
   [entry]="normal ? match.looserEntry : match.winnerEntry" [right]="true"></app-match-item-team>
