Added new line to long paths in path picker

--- a/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
+++ b/src/app/components/main/topbar/path-picker/path-picker-dialog/path-picker-dialog.component.html
@@ -25,6 +25,6 @@ Steam version:        {{info.steamVersion}}
 Replays pathbase:     {{info.replaysPathBase}}
 Preferences pathbase: {{info.preferencesPathBase}}
 Replays folder found: {{info.replaysFoldersFound}}
-Replays paths:        {{info.replaysFolders | join:','}}
+Replays paths:        {{info.replaysFolders | join:',\n'}}
       </pre>
 </ng-container>
