--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -76,43 +76,12 @@
       {{ 'monitor.bot' | translate }}
     </ng-container>
     <ng-container *ngIf="!player.bot && !player.hidden && (!player.shipStats || player.shipStats.battles <= 0)">
-      {{ 'monitor.noBattles' | translate }}
+      <ng-container *ngIf="player.shipInfo.testship">
+        {{ 'monitor.testship' | translate }}
+      </ng-container>
+      <ng-container *ngIf="!player.shipInfo.testship">
+        {{ 'monitor.noBattles' | translate }}
+      </ng-container>
     </ng-container>
   </div>
 </div>
-<!-- {
-  "accountId": 534414851,
-  "bot": false,
-  "hidden": false,
-  "karma": 220,
-  "relation": 0,
-  "name": "Lumeniac",
-  "shipInfo": {
-    "name": "République",
-    "tier": 10,
-    "id": 4179572560,
-    "type": "Battleship"
-  },
-  "overallStats": {
-    "battles": 256,
-    "winrate": 64.0625,
-    "averageXp": 0,
-    "averageDamage": 83633,
-    "averageFrags": 0.73046875,
-    "personalRating": 0
-  },
-  "shipStats": {
-    "battles": 188,
-    "winrate": 64.8936170212766,
-    "averageXp": 0,
-    "averageDamage": 83102,
-    "averageFrags": 0.69680851063829785,
-    "personalRating": 1104
-  },
-  "clan": {
-    "id": 500139870,
-    "name": "Marine Division Fenrir",
-    "color": "#CDA4FF",
-    "tag": "MDF"
-  }
-} -->
