Fix sanitize bug, add back navigation to clanwars, fixed link copy for qr code

--- a/src/app/components/main/clanwars/history/history-clan/clanrating-info/clanrating-info.component.html
+++ b/src/app/components/main/clanwars/history/history-clan/clanrating-info/clanrating-info.component.html
@@ -7,7 +7,7 @@
     <span style="font-size: 1.1em">Points</span>
   </span>
 </div>
-<div class="info-row" *ngIf="rating.battles > 0">
+<div class="info-row" *ngIf="rating?.battles > 0">
   <span>
     <strong>Battles</strong>&nbsp;{{rating.battles}}
   </span>
