--- a/src/styles/skeleton-grid.scss
+++ b/src/styles/skeleton-grid.scss
@@ -6,6 +6,7 @@
   max-width: 1650px;
   margin: 0 auto;
   box-sizing: border-box;
+  padding-bottom: 2em!important;
 
   &.small {
     max-width: 960px;
