Fix primetime display error

--- a/src/app/components/main/clanwars/match-item/match-item.component.html
+++ b/src/app/components/main/clanwars/match-item/match-item.component.html
@@ -1,7 +1,7 @@
 <app-match-item-team id="left" [season]="match.season" [clan]="normal ? match.winner : match.looser"
   [entry]="normal ? match.winnerEntry : match.looserEntry"></app-match-item-team>
 <div id="center">
-  <img *ngIf="match.primeTime" class="region"
+  <img *ngIf="match.primeTime != null" class="region"
     src="assets/region-{{match.primeTime | prime2Region:match.season }}.svg" />
   <span class="vs">vs</span>
   <span class="date">{{match.date | date:'d.M.yy H:mm:ss'}}</span>
