--- a/src/app/components/main/analytics-info/analytics-info.component.html
+++ b/src/app/components/main/analytics-info/analytics-info.component.html
@@ -1,5 +1,5 @@
 <p *isDesktop>
-  This app uses Google Analytics with the <a
+  This app uses Google Analytics with the <a externalLink
     href="https://developers.google.com/analytics/devguides/collection/protocol/v1">Measurement Protocol</a>
   implementation. <br />
   It is used to track the current users, user actions, the screen size, the app version and errors. <br />
@@ -17,7 +17,7 @@
   <strong>If you change your mind, you can always go to the settings and change the option.</strong>
 </p>
 <p *isBrowser>
-  This website/app uses Google Analytics with the <a href="https://developers.google.com/gtagjs">gtag.js</a>
+  This website/app uses Google Analytics with the <a target="_blank" href="https://developers.google.com/gtagjs">gtag.js</a>
   implementation. <br />
   It is used to track the visitor amount, visitor actions, general device information (brand, os, screen size, ...) and
   errors. <br />
