Fix scroll and mode explanation popup

--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -167,7 +167,7 @@
           <a (click)="showExaplanationDialog = true">{{'settings.appearance.teamWinrate.explanation' | translate}}</a>
         </summary>
         <p-dialog [header]="'settings.appearance.teamWinrate.explanation' | translate"
-          [(visible)]="showExaplanationDialog" [style]="{'max-width': '600px'}" [modal]="true" appendTo="body">
+          [(visible)]="showExaplanationDialog" [style]="{'max-width': '600px'}" [modal]="true">
           <p externalLink>
             <strong>Average (Mean) and Median</strong> <br />
             <a href="https://www.purplemath.com/modules/meanmode.htm">https://www.purplemath.com/modules/meanmode.htm</a>
