Added Linux switches

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,7 @@
-<app-titlebar *isDesktop></app-titlebar>
+<ng-container *isDesktop>
+  <app-titlebar *isWindows></app-titlebar>
+</ng-container>
+
 <app-topbar></app-topbar>
 <!-- <app-menu></app-menu> -->
 <ng-container *isDesktop>
