Add Icons on Non-Compact view
Small experiment, but "A picture is worth more than 1000 words".

--- a/src/app/components/main/monitor/player/value-label/value-label.component.html
+++ b/src/app/components/main/monitor/player/value-label/value-label.component.html
@@ -1,9 +1,9 @@
 <span [pTooltip]="config.layoutMode !== 'compact' ? null : label" tooltipPosition="top">
+  <ng-container><!--*ngIf="config.layoutMode === 'compact'"-->
+    <fa-icon [icon]="icon" [fixedWidth]="true"></fa-icon>&nbsp;
+  </ng-container>
   <ng-container *ngIf="config.layoutMode !== 'compact'">
     {{label}}:&nbsp;
-  </ng-container>
-  <ng-container *ngIf="config.layoutMode === 'compact'">
-    <fa-icon [icon]="icon" [fixedWidth]="true"></fa-icon>&nbsp;
   </ng-container>
   <ng-content></ng-content>
 </span>
