--- a/src/app/components/main/titlebar/titlebar.component.html
+++ b/src/app/components/main/titlebar/titlebar.component.html
@@ -1,21 +1,23 @@
-<div class="app-icon-wrapper">
-  <img class="app-icon" src="assets/icons/favicon-light.ico" />
-</div>
-<div class="app-title-wrapper">
-  {{title}}
-</div>
-
-<div class="icon-wrapper">
-  <div class="title-icon" (click)="minimize()">
-    <fa-icon [icon]="minimizeIcon"></fa-icon>
+<div class="app-titlebar-draggable">
+  <div class="app-icon-wrapper">
+    <img class="app-icon" src="assets/icons/favicon-light.ico" />
+  </div>
+  <div class="app-title-wrapper">
+    {{title}}
   </div>
 
-  <div class="title-icon" (click)="maximize()">
-    <fa-icon *ngIf="win?.maximizable && !win?.isMaximized()" [icon]="maximizeIcon"></fa-icon>
-    <fa-icon *ngIf="win?.isMaximized()" [icon]="restoreIcon"></fa-icon>
-  </div>
+  <div class="icon-wrapper">
+    <div class="title-icon" (click)="minimize()">
+      <fa-icon [icon]="minimizeIcon"></fa-icon>
+    </div>
 
-  <div class="title-icon close" (click)="close()">
-    <fa-icon [icon]="closeIcon"></fa-icon>
+    <div class="title-icon" (click)="maximize()">
+      <fa-icon *ngIf="win?.maximizable && !win?.isMaximized()" [icon]="maximizeIcon"></fa-icon>
+      <fa-icon *ngIf="win?.isMaximized()" [icon]="restoreIcon"></fa-icon>
+    </div>
+
+    <div class="title-icon close" (click)="close()">
+      <fa-icon [icon]="closeIcon"></fa-icon>
+    </div>
   </div>
 </div>
