--- a/src/styles/monitor.scss
+++ b/src/styles/monitor.scss
@@ -151,8 +151,8 @@ app-player {
     width: 100%;
     overflow: hidden;
 
-    &.force-white>div:not(#name)>strong {
-      color: $textColor !important;
+    &.force-white>div:not(#name)  strong {
+      color: $primaryTextColor !important;
     }
 
     &.hidden,
