Removed CW Clan Tag conditional
With the addition of Mercenaries to CWs, the CW check  for Clan Tags is now obsolete.

--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -3,7 +3,7 @@
   (click)="openWowsNumbers(player)">
   <div id="name">
     <strong>
-      <span *ngIf="player.clan && !cw"
+      <span *ngIf="player.clan"
         [style.color]="player.clan.color | sanitizeCss">[{{player.clan.tag}}]&nbsp;</span>
       <span>{{player.name}}</span>
     </strong>
